Fixed window overlap

--- a/LandingPage/CSS/bodycontent.css
+++ b/LandingPage/CSS/bodycontent.css
@@ -1,8 +1,7 @@
 .changing-content-header {
     font-size: 50px;
     margin: 0;
-    position: relative;
-    padding-top: 100px;
+    padding-top: 70px;
 }
 
 main > div {
